--- a/main.html
+++ b/main.html
@@ -9,9 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>
-		<div id="sizeInfo">
-			
-		</div>
+		<div id="sizeInfo"></div>
 	</h1>
     <script type="text/javascript" src="./script.js">
 </script>
